--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-tutorial",
+  "name": "onestop",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -9,14 +9,29 @@
     "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.3",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "autoprefixer": "^10.4.13",
+    "css-loader": "^6.7.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "node-sass": "^8.0.0",
+    "postcss": "^8.4.19",
+    "postcss-loader": "^7.0.2",
+    "react-svg-loader": "^3.0.3",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.2.4",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
@@ -24,13 +39,11 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
-    "css-loader": "^6.7.1",
-    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass-loader": "^13.2.0",
-    "style-loader": "^3.3.1"
+    "react-hook-form": "^7.40.0",
+    "react-otp-input": "^2.4.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-router-dom": "^6.4.4"
   }
 }
