--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src/",
     "outDir": "./dist/",
     // "noImplicitAny": true,
     "module": "CommonJS",
@@ -9,6 +10,6 @@
     "target": "es5",
     "jsx": "react-jsx",
     // "allowJs": true,
-    "moduleResolution": "Node"
-  }
+    "moduleResolution": "Node",
+  },
 }
